<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:background="@color/background_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.MainFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/main_card"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintDimensionRatio="2:1.2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ic_card_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/ic_mastercard" />

                    <TextView
                        android:id="@+id/card_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/text_dark"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/ic_card_type"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/ic_card_type"
                        app:layout_constraintTop_toTopOf="@id/ic_card_type" />

                    <ImageView
                        android:id="@+id/user_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_user"
                        app:layout_constraintBottom_toTopOf="@id/converted_money"
                        app:layout_constraintStart_toStartOf="@id/ic_card_type"
                        app:layout_constraintTop_toBottomOf="@id/ic_card_type" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="@id/user_image"
                        app:layout_constraintStart_toEndOf="@id/user_image"
                        app:layout_constraintTop_toTopOf="@id/user_image"
                        tools:text="Anton Ivanov" />

                    <TextView
                        android:id="@+id/valid_thru_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="22dp"
                        android:text="@string/valid_thru"
                        android:textAllCaps="true"
                        android:textSize="8sp"
                        app:layout_constraintBottom_toTopOf="@id/valid_thru"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/user_name"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/valid_thru"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="@id/user_name"
                        app:layout_constraintEnd_toEndOf="@id/valid_thru_title"
                        app:layout_constraintTop_toBottomOf="@id/valid_thru_title"
                        tools:text="12/22" />


                    <TextView
                        android:id="@+id/converted_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_dark"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/user_image"
                        app:layout_constraintTop_toBottomOf="@id/user_image"
                        tools:text="231321" />

                    <TextView
                        android:id="@+id/balance_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/your_balance"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toTopOf="@id/balance_value"
                        app:layout_constraintEnd_toEndOf="@id/valid_thru"
                        app:layout_constraintTop_toTopOf="@id/converted_money" />

                    <TextView
                        android:id="@+id/balance_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/text_dark"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/converted_money"
                        app:layout_constraintEnd_toEndOf="@id/balance_title"
                        app:layout_constraintTop_toBottomOf="@id/balance_title"
                        tools:text="23421421421" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/change_currency_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/change_currency"
                android:textColor="@color/text_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/main_card"
                app:layout_constraintTop_toBottomOf="@id/main_card" />

            <androidx.cardview.widget.CardView
                android:id="@+id/gbp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="28dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/eur"
                app:layout_constraintStart_toStartOf="@id/change_currency_title"
                app:layout_constraintTop_toBottomOf="@id/change_currency_title">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/gbp"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="GBP"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/eur"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/rub"
                app:layout_constraintStart_toEndOf="@id/gbp"
                app:layout_constraintTop_toBottomOf="@id/change_currency_title">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/euro"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="EUR"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/rub"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="16dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/eur"
                app:layout_constraintTop_toBottomOf="@id/change_currency_title">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="1dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rub"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="RUB"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/rub"
                app:layout_constraintStart_toStartOf="@id/gbp"
                app:layout_constraintTop_toBottomOf="@id/gbp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/history_title"
                        android:textColor="@color/text_dark"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/history_rv"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        tools:listitem="@layout/item_history"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</FrameLayout>